vid mask z-index issue on ff

--- a/less/app.less
+++ b/less/app.less
@@ -154,7 +154,7 @@ h1,h2,h3,h4,h5,h6 {
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, .4);
-        z-index: 1;
+        //z-index: 1;
     }
 }
 
@@ -225,9 +225,12 @@ h1,h2,h3,h4,h5,h6 {
             width: 100%;
             height: 100%;
 
+
             .landing-card {
                 text-align: center;
                 padding-top: 20px;
+                position: relative;
+                z-index: 2;
 
                 display: table-cell;
                 text-align: center;
